# 10cent-Time-Bot-

./: .gitignore  BATS_IWM, 5.csv  BATS_QQQ, 5.csv  BATS_SPY, 5.csv  BATS_XLB, 5.csv  BATS_XLB, 60.csv  BATS_XLE, 5.csv  BATS_XLE, 60.csv  BATS_XLF, 5.csv  BATS_XLF, 60.csv  BATS_XLI, 5.csv  BATS_XLI, 60.csv  BATS_XLK, 5.csv  BATS_XLK, 60.csv  BATS_XLP, 5.csv  BATS_XLP, 60.csv  BATS_XLU, 5.csv  BATS_XLU, 60.csv  BATS_XLV, 5.csv  BATS_XLV, 60.csv  BATS_XLY, 5.csv  BATS_XLY, 60.csv  BINANCE_BTCUSDT.P, 5.csv  BINANCE_BTCUSDT.P, 60.csv  BINANCE_ETHUSDT.P, 5.csv  BINANCE_ETHUSDT.P, 60.csv  CBOE_DLY_VX1!, 5.csv  CBOT_ZN1!, 5.csv  CME_MINI_M2K1!, 5.csv  CME_MINI_MES1!, 5.csv  CME_MINI_MNQ1!, 5 (1).csv  COMEX_MINI_MGC1!, 5.csv  ChronoMatrix_V5_Guide_FRESH.md  NYMEX_MCL1!, 5.csv  README.md  pyproject.toml
scripts/: audit_basis.py  audit_combined_be.py  audit_commodity_cot.py  audit_cot.py  audit_cot_multi.py  audit_orb.py  audit_overnight.py  audit_stock_xsmom.py  audit_tsmom.py  audit_tsmom_cta.py  audit_tsmom_futures.py  audit_xsmom.py  fetch_and_run_qqq.py  monthly_rebalance.py  multi_ticker_orb.py  run_basis_backtest.py  run_orb_backtest.py  run_tsmom_backtest.py  run_xsmom_backtest.py
src/ten_cent_bot/: backtest.py  basis.py  commodity_cot.py  contracts.py  cot.py  data.py  metrics.py  orb.py  orchestrator.py  overnight.py  risk.py  stock_xsmom.py  tradovate.py  tsmom.py  tsmom_cta.py  tv_data.py  xsmom.py
tests/: test_orb.py  test_orchestrator.py
